--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@tanstack/react-query-devtools": "^4.29.1",
     "antd": "^5.4.2",
     "axios": "^1.3.5",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
